--- a/style.css
+++ b/style.css
@@ -136,11 +136,11 @@ a:visited.post-edit-link {
 }
 .no-right-sidebar .post,
 .no-right-sidebar .content {
-	width: 100%;
+	width: 80%;
 }
 .page .post,
 .single .post {
-	width: 100%;
+	width: 80%;
 }
 .page-template-page-nosidebar-php .post,
 .page-template-page-nosidebar-php .content
@@ -209,8 +209,8 @@ a:visited.post-edit-link {
 	clear: both;
 }
 .post-date {
-	width: 100px;
-	height: 100px;
+//	width: 100px;
+//	height: 100px;
 	background-repeat: no-repeat;
 	font-family: Georgia, "Times New Roman", serif;
 	font-weight: bold;
@@ -228,7 +228,7 @@ a:visited.post-edit-link {
 	font-family: Georgia, "Times New Roman", serif;
 	font-weight: bold;
 	text-transform: uppercase;
-	text-align: center;
+	text-align: left;
 }
 .post-day {
 	display: block;
@@ -242,9 +242,9 @@ a:visited.post-edit-link {
 	font-size: 12px;
 }
 .post-month {
-	padding-top: 25px;
+//	padding-top: 25px;
 	display: block;
-	font-size: 16px;
+	font-size: 15px;
 }
 .post-sidebar {
 	width: 100px;
@@ -301,7 +301,7 @@ h3.widgettitle a:link {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 20px;
 	font-style: italic;
-	text-transform: lowercase;
+	//text-transform: lowercase;
 	line-height: normal;
 	margin: 0px;
 	padding-top: 0px;
@@ -359,7 +359,7 @@ li.widget ul li a:active {
 	font-weight: bold;
 	font-size: 16px;
 	font-family: Georgia, "Times New Roman", Times, serif;
-	text-transform: lowercase;
+	//text-transform: lowercase;
 	font-style: italic;
 	color: #fff;
 }
@@ -460,7 +460,7 @@ li.widget ul li a:active {
 	font-size: 55px;
 	font-weight: bold;
 	position: relative;
-	text-transform: lowercase;
+	//text-transform: lowercase;
 	letter-spacing: -4px;
 	float: left;
 	display: block;
@@ -563,7 +563,7 @@ h3.footer-widgettitle a:visited {
 	font-style: italic;
 	font-size: 20px;
 	font-weight: bold;
-	text-transform: lowercase;
+	//text-transform: lowercase;
 	margin-bottom: 10px;
 }
 /* End Footer */
